adding working version of client