@@ -13,12 +13,11 @@
  * License for the specific language governing permissions and limitations under
  * the License.
  */
-package org.cnx.repository.atompub.servlets.servicedocument;
+package org.cnx.repository.atompub.servlets;
 
 import com.google.appengine.api.utils.SystemProperty;
 import com.google.appengine.api.utils.SystemProperty.Environment;
 
-import com.sun.jersey.api.client.WebResource;
 import com.sun.jersey.test.framework.JerseyTest;
 import com.sun.jersey.test.framework.WebAppDescriptor;
 
@@ -33,14 +32,18 @@ import java.net.URL;
  * @author Arjun Satyapal
  */
 public abstract class CnxAtomPubBaseTest extends JerseyTest {
-    private WebResource webResource;
+    //TODO(arjuns) : Move this to parent folder.
+
+    private final static String PACKAGE = "org.cnx.repository.atompub.servlets";
+
+//    private WebResource webResource;
     private CnxAtomPubConstants constants;
     private URL cnxServerAtomPubUrl;
     private int cnxServerPort;
 
-    public WebResource getWebResource() {
-        return webResource;
-    }
+//    public WebResource getWebResource() {
+//        return webResource;
+//    }
 
     public CnxAtomPubConstants getConstants() {
         return constants;
@@ -58,18 +61,22 @@ public abstract class CnxAtomPubBaseTest extends JerseyTest {
      * Remember that Port is binded once the construction phase is over. So derived classes want to
      * access URI created for CNX Server, they should not rely on constructor.
      */
-    public CnxAtomPubBaseTest(String resourcePackage) throws MalformedURLException {
-        super(new WebAppDescriptor.Builder(resourcePackage).contextPath(
+    public CnxAtomPubBaseTest() throws MalformedURLException {
+        super(new WebAppDescriptor.Builder(PACKAGE).contextPath(
             CnxAtomPubConstants.ATOMPUB_URL_PREFIX).build());
 
-        webResource = resource();// .path(CnxAtomPubConstants.SERVICE_DOCUMENT_PATH);
-        cnxServerAtomPubUrl = webResource.getURI().toURL();
+//        webResource = resource();// .path(CnxAtomPubConstants.SERVICE_DOCUMENT_PATH);
+//        cnxServerAtomPubUrl = webResource.getURI().toURL();
+
+        //TODO(arjuns) : Temp override as junit is not working with datastore.
+        cnxServerAtomPubUrl = new URL("http://localhost:8888/atompub");
 
         // Initializing AppEngine environment.
         SystemProperty.environment.set(Environment.Value.Development);
 
         // Initializing CnxAtomPub Service.
         constants =
-            new CnxAtomPubConstants(webResource.getURI().toString(), webResource.getURI().getPort());
+//            new CnxAtomPubConstants(webResource.getURI().toString(), webResource.getURI().getPort());
+        new CnxAtomPubConstants(cnxServerAtomPubUrl.toString(), 8888);
     }
 }
